Oooops! Always use classes!

--- a/one_game.html
+++ b/one_game.html
@@ -60,10 +60,18 @@
     <div class="row">
 
         <div class="oneGame__wrapper flexS-A flexAi-C mobileFlexFD-C">
-            <h1>Failling Ninja</h1>
+            <h1 class="oneGame__title">Failling Ninja</h1>
             <img alt="" src="https://image-cc.s3.envato.com/files/228393380/SplashFallingA.png" class="scale-with-grid" />
         </div>
     </div>
+
+<aside class="widget group btn">
+    <div class="submit__form">
+        <!--<a class="submit__link" href="">-->
+        <button class="submit__button">Играть!</button>
+        <!--</a>-->
+    </div>
+</aside>
 
 
 <div class="container">
@@ -105,13 +113,6 @@
                         <p>If your intention is to export the game to Android, iOS, Windows or others, the game is ready, just export. Place adsense / admob and
                             earn money</p></div>
 
-                <aside class="widget group btn">
-                    <div class="submit__form">
-                        <!--<a class="submit__link" href="">-->
-                        <button class="submit__button">Получить доступ</button>
-                        <!--</a>-->
-                    </div>
-                </aside>
                 </div>
                 <div class="screenshots">
                     <div class="content__img"><img src="https://0.s3.envato.com/files/228393382/1.png" class="content__oneImg"></div>
