--- a/games_list.html
+++ b/games_list.html
@@ -51,7 +51,7 @@
             <ul class="nav menu">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="games_list.html">Игры</a></li>
-                <li><a href="#">О Сервисе</a></li>
+                <li><a href="one_game.html">Сылка на страницу одной игры (ВРЕМЕННО!)</a></li>
                 <li><a href="#">Вход</a></li>
                 <li><a href="#">Регистрация</a></li>
             </ul>
@@ -59,7 +59,7 @@
     </div>
 </header>
 
-<aside class="widget group bnt">
+<aside class="widget group btn">
     <div class="submit__form" >
         <!--<a class="submit__link" href="">-->
         <button class="submit__button">Получить доступ</button>
@@ -77,8 +77,6 @@
             <div class="two-thirds column alpha content">
 
                 <div class="row latest-news">
-                    <h3>Latest Reviews</h3>
-                    <h4 class="sub">Subheader with a small description</h4>
 
 
                     <article class="two-thirds column alpha item item-vertical">
@@ -203,7 +201,6 @@
                             </div>
                         </div>
                     </article>
-                    </article>
 
 
                 </div><!-- /content -->
@@ -212,7 +209,6 @@
 
             <div class="one-third column omega sidebar narrow">
                 <aside class="widget group ci_widget_top">
-                    <h3>TOP RATED</h3>
                     <ul>
                         <a target="_blank" href="https://0.s3.envato.com/files/228256006/index.html" id="game1">
                             <li class="group topR-group">
