--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
 	<!-- Favicons
 	================================================== -->
 	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
 
 </head>
 
@@ -52,7 +49,7 @@
             <ul class="nav menu">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="games_list.html">Игры</a></li>
-                <li><a href="#">О Сервисе</a></li>
+                <li><a href="one_game.html">Сылка на страницу одной игры (ВРЕМЕННО!)</a></li>
                 <li><a href="#">Вход</a></li>
                 <li><a href="#">Регистрация</a></li>
             </ul>
@@ -102,8 +99,6 @@
 		<div class="sixteen columns columnRevers">
 			<div class="ten columns alpha content">
 				<div class="row latest-reviews">
-					<h3>Latest Reviews</h3>
-					<h4 class="sub">Subheader with a small description</h4>
 					
 					<article class="five columns alpha item">
 						<a target="_blank" href="http://www.lineebus.it/g/flood/#" class="fb"><img alt="" src="https://image-cc.s3.envato.com/files/227930868/banner.jpg" class="scale-with-grid" /></a>
@@ -163,7 +158,6 @@
 				</aside>-->
 
 				<aside class="widget group ci_widget_top">
-					<h3>TOP RATED</h3>
                     <ul>
                         <a target="_blank" href="https://0.s3.envato.com/files/228256006/index.html" id="game1">
                             <li class="group topR-group">
@@ -222,8 +216,6 @@
     <div class="row">
         <div class="sixteen columns contentBlock">
             <div class="row latest-reviews">
-                <h3>Latest Reviews</h3>
-                <h4 class="sub">Subheader with a small description</h4>
 
                 <article class="four columns alpha item">
                     <img alt="" src="http://placehold.it/420x300&amp;text=img1" class="scale-with-grid" />
