--- a/txtpage.html
+++ b/txtpage.html
@@ -1,27 +1,47 @@
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7 ]><html class="ie ie6"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
 <head>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<!-- Basic Page Needs
+  ================================================== -->
+	<meta charset="utf-8">
+	<meta name="description" content="">
+	<meta name="author" content="">
+
+	<!-- Mobile Specific Metas
+  ================================================== -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="MobileOptimized" content="width">
     <meta name="HandheldFriendly" content="True">
-    <meta charset="UTF-8">
+
+	<!-- CSS
+  ================================================== -->
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:700">
+	<link rel="stylesheet" href="css/flexslider.css">
+	<!--<link rel="stylesheet" href="fancybox/jquery.fancybox.css">-->
+	<link rel="stylesheet" href="css/skeleton.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/media.css">
+
+	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+
+	<!-- Favicons
+	================================================== -->
+	<link rel="shortcut icon" href="images/favicon.ico">
     <title>СЮДА НАЗВАНИЕ СТРАНИЦЫ/СЕРВИСА</title>
     <style>
 
         body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #FFFFFD;
-            color: #1a1c22;
+            color: #FFFFFD;
         }
-        .container {
-            width: 90%;
-            margin: 0 auto;
+        .rulesContainer {
+            width: 50%;
+            margin: 20px auto 0;
         }
         h1 {
             text-align: center;
@@ -33,84 +53,159 @@
             margin-left: 5%;
             margin-right: 2%;
         }
+        
+        @media screen and (max-width: 767px) {
+            .rulesContainer {
+                width: 86%;
+            }
+        }
 
     </style>
 </head>
 
 <body>
 
-<div class="container">
+<header class="header">
+    <div class="container mobileHeaderContainer flexS-B">
+        <h1 class="logo"><a href="index.html">Game Portal</a></h1>
+        <nav id="navigation">
+            <div class="wrapper">
+                <div class="menuToggle"></div>
+            </div>
+            <ul class="nav menu">
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="games_list.html">Игры</a></li>
+                <li><a href="one_game.html">Сылка на страницу одной игры (ВРЕМЕННО!)</a></li>
+                <li><a href="#">Вход</a></li>
+                <li><a href="#">Регистрация</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
+<div class="rulesContainer">
     <h1>Заголовок</h1>
     <h2><strong>1.</strong></h2>
-        <p><strong>1.1.</strong>Текст вставляется сюда</p>
-        <p><strong>1.2.</strong></p>
-        <p><strong>1.3.</strong></p>
-        <p><strong>1.4.</strong></p>
-        <p><strong>1.5.</strong></p>
+    <p><strong>1.1.</strong>Текст вставляется сюда</p>
+    <p><strong>1.2.</strong></p>
+    <p><strong>1.3.</strong></p>
+    <p><strong>1.4.</strong></p>
+    <p><strong>1.5.</strong></p>
 
     <h2><strong>2.</strong></h2>
-        <p><strong>2.1.</strong></p>
-        <p><strong>2.2.</strong></p>
-        <p><strong>2.3.</strong></p>
+    <p><strong>2.1.</strong></p>
+    <p><strong>2.2.</strong></p>
+    <p><strong>2.3.</strong></p>
 
     <h2><strong>3.</strong></h2>
 
     <h2><strong>4.</strong></h2>
-        <p><strong>4.1.</strong></p>
-        <p><strong>4.2.</strong></p>
-        <p><strong>4.3.</strong></p>
+    <p><strong>4.1.</strong></p>
+    <p><strong>4.2.</strong></p>
+    <p><strong>4.3.</strong></p>
 
     <h2><strong>5.</strong></h2>
-        <p><strong>5.1.</strong></p>
-        <p><strong>5.2.</strong></p>
-        <p><strong>5.3.</strong></p>
+    <p><strong>5.1.</strong></p>
+    <p><strong>5.2.</strong></p>
+    <p><strong>5.3.</strong></p>
 
     <h2><strong>6.</strong></h2>
-        <p><strong>6.1</strong></p>
-        <p><strong>6.2</strong></p>
-        <p><strong>6.3</strong></p>
-        <p><strong>6.4</strong></p>
-        <p><strong>6.5</strong></p>
-        <p><strong>6.6</strong></p>
-        <p><strong>6.7</strong></p>
-        <p><strong>6.8</strong></p>
-        <p><strong>6.9</strong></p>
+    <p><strong>6.1</strong></p>
+    <p><strong>6.2</strong></p>
+    <p><strong>6.3</strong></p>
+    <p><strong>6.4</strong></p>
+    <p><strong>6.5</strong></p>
+    <p><strong>6.6</strong></p>
+    <p><strong>6.7</strong></p>
+    <p><strong>6.8</strong></p>
+    <p><strong>6.9</strong></p>
 
     <h2><strong>7.</strong></h2>
-        <p><strong>7.1.</strong></p>
-        <p><strong>7.2.</strong></p>
-        <p><strong>7.3.</strong></p>
+    <p><strong>7.1.</strong></p>
+    <p><strong>7.2.</strong></p>
+    <p><strong>7.3.</strong></p>
 
     <h2><strong>8.</strong></h2>
-        <p><strong>8.1.</strong></p>
+    <p><strong>8.1.</strong></p>
 
     <h2><strong>9.</strong></h2>
-        <p><strong>9.1</strong></p>
-        <p><strong>9.2</strong></p>
-        <p><strong>9.3</strong></p>
-        <p><strong>9.4</strong></p>
+    <p><strong>9.1</strong></p>
+    <p><strong>9.2</strong></p>
+    <p><strong>9.3</strong></p>
+    <p><strong>9.4</strong></p>
 
     <h2><strong>10.</strong></h2>
-        <p><strong>10.1</strong></p>
-        <p><strong>10.2</strong></p>
-        <p><strong>10.3</strong></p>
-        <p><strong>10.4</strong></p>
-        <p><strong>10.5</strong></p>
+    <p><strong>10.1</strong></p>
+    <p><strong>10.2</strong></p>
+    <p><strong>10.3</strong></p>
+    <p><strong>10.4</strong></p>
+    <p><strong>10.5</strong></p>
 
     <h2><strong>11.</strong></h2>
-        <p><strong>11.1</strong></p>
-        <p><strong>11.2</strong></p>
-        <p><strong>11.3</strong></p>
-        <p><strong>11.4</strong></p>
+    <p><strong>11.1</strong></p>
+    <p><strong>11.2</strong></p>
+    <p><strong>11.3</strong></p>
+    <p><strong>11.4</strong></p>
 
 
 
     <!--Как вставлять ссылку-->
     <a href="текст ссылки типа такой (http://videomeo.by/static/rules.html)">Отображаемый на странице кликабельный текст</a>
-     На всякий случай ковычки ёлочки: « » :)
+    На всякий случай ковычки ёлочки: « » :)
 
 
 </div>
+<div id="footer-wrap">
+    <div class="credits-wrap">
+        <footer>
+            <div id="MainFooter">
+                <ul class="list-group">
+                    <li>
+                        <a class="btn btn-default btn-lg btn-get-access" href="#">
+                            Получить доступ
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://unsubscribe.center/15551/">
+                            Управление подпиской
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://videomeo.by/static/rules.html">
+                            Пользовательское соглашение
+                        </a>
+                    </li>
+                </ul>
+                <div class="footer-info">
+                    Стоимость подписки: 0,20 р. с НДС за 1 день для абонентов Life. Чтобы остановить подписку, отправьте SMS с текстом СТОП 898 на номер 1445.
+                    Служба поддержки +375 17 328-69-05 (Круглосуточно) &nbsp;&nbsp;&nbsp;
+                    <a href="http://videomeo.by/static/mts-by-rules.html" style="text-decoration: underline; text-align: center">
+                        Условия подписки
+                    </a>
+                </div>
+
+            </div>
+        </footer>
+
+    </div>
+</div><!-- /footer-wrap -->
+
+
+<script src="./js/jquery-3.0.0.min.js"></script>
+<script src="./js/jquery-1.7.2.min.js"></script>
+<script src="./js/jquery.flexslider-min.js"></script>
+<script src="./js/superfish.js"></script>
+<!--<script src="fancybox/jquery.fancybox.pack.js"></script>-->
+<script src="./js/jquery.formLabels1.0.js"></script>
+<script src="./js/jquery.equalHeights.js"></script>
+<script src="./js/jquery.scripts.js"></script>
+<script src="./js/slider.js"></script>
+<script src="./js/mobileMenu.js"></script>
+
+<!--[if (gte IE 6)&(lte IE 8)]>
+	<script type="text/javascript" src="js/selectivizr-min.js"></script>
+<![endif]-->
+
 
 </body>
 </html>
