--- a/txtpage.html
+++ b/txtpage.html
@@ -40,8 +40,9 @@
             color: #FFFFFD;
         }
         .rulesContainer {
-            width: 50%;
+            width: 65%;
             margin: 20px auto 0;
+            background-color: rgba(0, 0, 0, .6);
         }
         h1 {
             text-align: center;
@@ -86,66 +87,66 @@
 <div class="rulesContainer">
     <h1>Заголовок</h1>
     <h2><strong>1.</strong></h2>
-    <p><strong>1.1.</strong>Текст вставляется сюда</p>
-    <p><strong>1.2.</strong></p>
-    <p><strong>1.3.</strong></p>
-    <p><strong>1.4.</strong></p>
-    <p><strong>1.5.</strong></p>
+        <p><strong>1.1.</strong>Текст вставляется сюда</p>
+        <p><strong>1.2.</strong></p>
+        <p><strong>1.3.</strong></p>
+        <p><strong>1.4.</strong></p>
+        <p><strong>1.5.</strong></p>
 
     <h2><strong>2.</strong></h2>
-    <p><strong>2.1.</strong></p>
-    <p><strong>2.2.</strong></p>
-    <p><strong>2.3.</strong></p>
+        <p><strong>2.1.</strong></p>
+        <p><strong>2.2.</strong></p>
+        <p><strong>2.3.</strong></p>
 
     <h2><strong>3.</strong></h2>
 
     <h2><strong>4.</strong></h2>
-    <p><strong>4.1.</strong></p>
-    <p><strong>4.2.</strong></p>
-    <p><strong>4.3.</strong></p>
+        <p><strong>4.1.</strong></p>
+        <p><strong>4.2.</strong></p>
+        <p><strong>4.3.</strong></p>
 
     <h2><strong>5.</strong></h2>
-    <p><strong>5.1.</strong></p>
-    <p><strong>5.2.</strong></p>
-    <p><strong>5.3.</strong></p>
+        <p><strong>5.1.</strong></p>
+        <p><strong>5.2.</strong></p>
+        <p><strong>5.3.</strong></p>
 
     <h2><strong>6.</strong></h2>
-    <p><strong>6.1</strong></p>
-    <p><strong>6.2</strong></p>
-    <p><strong>6.3</strong></p>
-    <p><strong>6.4</strong></p>
-    <p><strong>6.5</strong></p>
-    <p><strong>6.6</strong></p>
-    <p><strong>6.7</strong></p>
-    <p><strong>6.8</strong></p>
-    <p><strong>6.9</strong></p>
+        <p><strong>6.1</strong></p>
+        <p><strong>6.2</strong></p>
+        <p><strong>6.3</strong></p>
+        <p><strong>6.4</strong></p>
+        <p><strong>6.5</strong></p>
+        <p><strong>6.6</strong></p>
+        <p><strong>6.7</strong></p>
+        <p><strong>6.8</strong></p>
+        <p><strong>6.9</strong></p>
 
     <h2><strong>7.</strong></h2>
-    <p><strong>7.1.</strong></p>
-    <p><strong>7.2.</strong></p>
-    <p><strong>7.3.</strong></p>
+        <p><strong>7.1.</strong></p>
+        <p><strong>7.2.</strong></p>
+        <p><strong>7.3.</strong></p>
 
     <h2><strong>8.</strong></h2>
-    <p><strong>8.1.</strong></p>
+        <p><strong>8.1.</strong></p>
 
     <h2><strong>9.</strong></h2>
-    <p><strong>9.1</strong></p>
-    <p><strong>9.2</strong></p>
-    <p><strong>9.3</strong></p>
-    <p><strong>9.4</strong></p>
+        <p><strong>9.1</strong></p>
+        <p><strong>9.2</strong></p>
+        <p><strong>9.3</strong></p>
+        <p><strong>9.4</strong></p>
 
     <h2><strong>10.</strong></h2>
-    <p><strong>10.1</strong></p>
-    <p><strong>10.2</strong></p>
-    <p><strong>10.3</strong></p>
-    <p><strong>10.4</strong></p>
-    <p><strong>10.5</strong></p>
+        <p><strong>10.1</strong></p>
+        <p><strong>10.2</strong></p>
+        <p><strong>10.3</strong></p>
+        <p><strong>10.4</strong></p>
+        <p><strong>10.5</strong></p>
 
     <h2><strong>11.</strong></h2>
-    <p><strong>11.1</strong></p>
-    <p><strong>11.2</strong></p>
-    <p><strong>11.3</strong></p>
-    <p><strong>11.4</strong></p>
+        <p><strong>11.1</strong>Всякие правила, всякие правила, всякие правила, всякие правила, всякие правила, всякие правила, всякие правила, всякие правила, всякие правила, всякие правила, всякие правила, всякие правила, всякие правила, всякие правила, всякие правила, всякие правила, </p>
+        <p><strong>11.2</strong></p>
+        <p><strong>11.3</strong></p>
+        <p><strong>11.4</strong></p>
 
 
 
