A little bit more

--- a/txtpage.html
+++ b/txtpage.html
@@ -41,7 +41,7 @@
         }
         .rulesContainer {
             width: 65%;
-            margin: 20px auto 0;
+            margin: 20px auto 10px;
             background-color: rgba(0, 0, 0, .6);
         }
         h1 {
