--- a/games_list.html
+++ b/games_list.html
@@ -49,8 +49,7 @@
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="games_list.html">Игры</a></li>
                 <li><a href="one_game.html">Сылка на страницу одной игры (ВРЕМЕННО!)</a></li>
-                <li><a href="#">Вход</a></li>
-                <li><a href="#">Регистрация</a></li>
+                <li><a href="./log_in.html">Вход</a></li>
             </ul>
         </nav>
     </div>
